--- a/src/app/reviews/reviews.component.css
+++ b/src/app/reviews/reviews.component.css
@@ -1,6 +1,6 @@
-.container{
+.reviewsContainer{
     padding: 30px;
     width: 90%;
-    border: 2px solid orange;
+    border: 2px solid rgb(119, 0, 255);
     border-radius: 10px;
 }
